# org-analyser

./: .gitignore  ORG_PIPELINE_README.md  Org_Analyser_Setup_Guide.docx  Org_Analyser_Workflow_Guide.docx  PR_TASK_PROFILE_README.md  README.md  bitbucket-pipelines.yml  cli.py  config.example.yml  count_merged_prs.py  export_all_merged_prs.py  pr_task_profile_report.py  pyproject.toml  repo_analyzer.py  requirements.txt  run_org_pipeline.py  tokens.example
.claude/: settings.json
.github/workflows/: README.md  org-analyser.yml
analysis/: pr_task_profile.py  repo_analyzer.py
docs/: SECURITY_AND_COMPLIANCE.md
eval/: cybersecurity_pr_scanner.py  quality_evaluator.py  repo_evaluator.py  taxonomy_check.py
eval/task_taxonomy/: classify.py
llm/: batch.py  test_batch_routing.py  tree_redactor.py
pipeline/: progress.py  state.py
quality/: SKILL.md  agent_scorer.py  signal_scorer.py  unwrap.py
quality/references/: class-weights.md  classification.md  dimension-catalog.md  heuristics.md  report-template.md  scoring-math.md  verification.md
quality/scripts/: aggregate_org.py  classify_repo.py  git_stats.py  repo_stats.py  score.py  seal.py  sealing.py  verify.py
repo-eval-kit/: credential_redactor.py  cybersecurity_pr_scanner.py  platform_clients.py  production_quality_check.py  quality_evaluator.py  repo_evaluator.py  repo_evaluator_helpers.py  run_all_repos.py  security_check.py  taxonomy_check.py  vibecode_check.py
repo-eval-kit/test_runners/: analyzer.py  base.py  c_cpp.py  cobol.py  dotnet.py  dotnet_framework.py  go.py  javascript.py  jvm.py  parsers.py  (+4 more)
(+1 files in other folders)
